@@ -1,10 +1,13 @@
 /*
- * $Id: version.h,v 8.1 1990/08/27 10:46:21 dickey Exp $
+ * $Id: version.h,v 8.2 1991/04/01 12:34:48 dickey Exp $
  * Version-identifier for DED
  * $Log: version.h,v $
- * Revision 8.1  1990/08/27 10:46:21  dickey
- * added better error recovery to ".ftree" read/write
+ * Revision 8.2  1991/04/01 12:34:48  dickey
+ * added CTL/I (tab) subcommand to 't' (type) to alter tabs.
  *
+ *		Revision 8.1  90/08/27  10:46:21  dickey
+ *		added better error recovery to ".ftree" read/write
+ *		
  *		Revision 8.0  90/05/23  11:30:26  ste_cm
  *		BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS
  *		
@@ -158,4 +161,4 @@
  * 01 Dec 1987, added '*', '^' commands, made '%' refresh screen
  * 25 Nov 1987, added sccs-support (V,z,Z toggles, V,z,Z sorts)
  */
-static	char	version[] = "$Date: 1990/08/27 10:46:21 $";
+static	char	version[] = "$Date: 1991/04/01 12:34:48 $";
